Add page buttons and modify layouts.

--- a/src/GUI.form
+++ b/src/GUI.form
@@ -21,7 +21,7 @@
       <component id="d10f" class="javax.swing.JLabel" binding="titleLabel">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="271" height="25"/>
+            <preferred-size width="255" height="25"/>
           </grid>
         </constraints>
         <properties>
@@ -32,7 +32,7 @@
       <component id="5b3c0" class="javax.swing.JTextField" binding="titleTextField">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="271" height="14"/>
+            <preferred-size width="255" height="15"/>
           </grid>
         </constraints>
         <properties>
@@ -41,7 +41,9 @@
       </component>
       <component id="c351a" class="javax.swing.JLabel" binding="typeLabel">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="104" height="25"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Type"/>
@@ -49,9 +51,13 @@
       </component>
       <component id="47526" class="javax.swing.JComboBox" binding="typeBox1">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="15"/>
+          </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <model/>
+        </properties>
       </component>
       <component id="901a" class="javax.swing.JLabel" binding="yearLabel">
         <constraints>
@@ -64,7 +70,7 @@
       <component id="f851b" class="javax.swing.JTextField" binding="yearTextField">
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="15"/>
           </grid>
         </constraints>
         <properties>
@@ -93,7 +99,7 @@
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="30" height="30"/>
-            <preferred-size width="30" height="30"/>
+            <preferred-size width="255" height="30"/>
             <maximum-size width="30" height="30"/>
           </grid>
         </constraints>
@@ -102,7 +108,7 @@
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="30" height="30"/>
-            <preferred-size width="30" height="30"/>
+            <preferred-size width="255" height="30"/>
             <maximum-size width="30" height="30"/>
           </grid>
         </constraints>
