--- a/src/GUI.form
+++ b/src/GUI.form
@@ -1,79 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="660" height="494"/>
+      <xy x="20" y="20" width="786" height="494"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="e9b1e" class="javax.swing.JLabel" binding="mainTitle">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="98" height="25"/>
           </grid>
         </constraints>
         <properties>
+          <font name="Arial" size="24" style="1"/>
           <text value="IMDb Searching Engine"/>
         </properties>
       </component>
       <component id="d10f" class="javax.swing.JLabel" binding="titleLabel">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="255" height="25"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="255" height="30"/>
           </grid>
         </constraints>
         <properties>
+          <font name="Arial" size="15"/>
           <labelFor value="5b3c0"/>
           <text value="Title"/>
         </properties>
       </component>
       <component id="5b3c0" class="javax.swing.JTextField" binding="titleTextField">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="255" height="15"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="255" height="30"/>
           </grid>
         </constraints>
         <properties>
+          <font name="Verdana" size="13"/>
           <text value=""/>
         </properties>
       </component>
       <component id="c351a" class="javax.swing.JLabel" binding="typeLabel">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="104" height="25"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="104" height="30"/>
           </grid>
         </constraints>
         <properties>
+          <font name="Arial" size="15"/>
           <text value="Type"/>
         </properties>
       </component>
-      <component id="47526" class="javax.swing.JComboBox" binding="typeBox1">
+      <component id="47526" class="javax.swing.JComboBox" binding="typeBox">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="15"/>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="30"/>
           </grid>
         </constraints>
         <properties>
-          <model/>
+          <editable value="true"/>
+          <font name="Verdana" size="13"/>
+          <model>
+            <item value="All"/>
+            <item value="Movie"/>
+            <item value="Series"/>
+            <item value="Episode"/>
+          </model>
         </properties>
       </component>
       <component id="901a" class="javax.swing.JLabel" binding="yearLabel">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="30"/>
+          </grid>
         </constraints>
         <properties>
+          <font name="Arial" size="15"/>
           <text value="Year"/>
         </properties>
       </component>
       <component id="f851b" class="javax.swing.JTextField" binding="yearTextField">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="15"/>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="30"/>
           </grid>
         </constraints>
         <properties>
+          <font name="Verdana" size="13"/>
           <text value=""/>
         </properties>
       </component>
@@ -106,7 +121,7 @@
       </vspacer>
       <vspacer id="e0384">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="30" height="30"/>
             <preferred-size width="255" height="30"/>
             <maximum-size width="30" height="30"/>
@@ -115,12 +130,24 @@
       </vspacer>
       <component id="ef6e2" class="javax.swing.JButton" binding="buttonSearch">
         <constraints>
-          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="30"/>
+          </grid>
         </constraints>
         <properties>
+          <font size="13"/>
           <text value="Search"/>
         </properties>
       </component>
+      <vspacer id="8df36">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="10"/>
+            <preferred-size width="-1" height="10"/>
+            <maximum-size width="-1" height="10"/>
+          </grid>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
